# bank_be/src/routes/dashboard.routes.ts
@@ -1,11 +1,13 @@
 import express from "express";
 import { getDashboard } from "../controllers/dashboard.controller.js";
 import { transfer } from "../controllers/transfer.controller.js";
+import { startVideoCall } from "../controllers/videoCall.controller.js";
 import { authMiddleware } from "../middleware/auth.middleware.js";
 
 const router = express.Router();
 
 router.get('', authMiddleware, getDashboard);
 router.post('/transfer', authMiddleware, transfer);
+router.post('/video-call', authMiddleware, startVideoCall);
 
 export default router;
